--- a/Migration_Status_02.html
+++ b/Migration_Status_02.html
@@ -9,6 +9,7 @@
 	<meta charset="utf-8">
 	<script src="https://sdk.amazonaws.com/js/aws-sdk-2.208.0.min.js"></script>
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+	<script src="Migration_Status.js"></script>
 </head>
 
 <body>
@@ -32,92 +33,5 @@
 		<div id="myDiv" style="width: 500px; height: 500px;"><!-- Plotly chart will be drawn inside this DIV --></div>
 	</form>
 
-<script>
-
-	var ec2 = new AWS.EC2();
-	AWS.config.update({
-		region: "us-east-1",
-		accessKeyId: "AKIAJCY75NFRZN5WU6TQ",
-		secretAccessKey: "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"
-	});
-
-	function getDates() {
-		var listDate = [];
-		//demo1.innerHTML = '';
-		var startDate = document.getElementById("fromdate").value;
-		var endDate = document.getElementById("todate").value;
-		//alert(startDate);
-		//alert(endDate);
-		var dateMove = new Date(startDate);
-		var strDate = startDate;
-		while (strDate < endDate){
-  			var strDate = dateMove.toISOString().slice(0,10);
-				listDate.push(strDate);
-  			dateMove.setDate(dateMove.getDate()+1);
-		};
-		return listDate;
-	}
-
-	function getInstances(dates) {
-		var j = dates.length;
-		var instArray = [];
-		var count = 0;
-		for (var i = 0; i < j; ++i) {
-			var hourArray = [];
-			var d = dates[i];
-			for (var m = 0; m <= 2; m++) {
-				hourArray.push(d + 'T' + m + '*');
-			}
-			alert(hourArray);
-			var ec2 = new AWS.EC2();
-			AWS.config.update({
-				region: "us-east-1",
-				accessKeyId: "AKIAJCY75NFRZN5WU6TQ",
-				secretAccessKey: "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"
-			});
-
-			var describeInstances = function describeInstances() {
-			var params = {
-				Filters: [
-					{
-					Name: 'launch-time',
-					Values: hourArray
-					}]
-				};
-				alert(JSON.stringify(params.Filters));
-				return ec2.describeInstances(params).promise();
-			};
-
-			describeInstances().then(function(data){
-
-					var no_of_inst = data.Reservations.length;
-					instArray.push(no_of_inst);
-					alert(dates+' '+instArray);
-					++count;
-					if ( count == j-1 ) {
-						var trace2 = {
-		  				x: dates,
-		  				y: instArray,
-		  				type: 'bar'
-						};
-						var ec2data = [trace2];
-						Plotly.newPlot('myDiv', ec2data);
-					}
-				});
-
-			//.catch(function(err) {
-			//	console.log(err);
-			//});
-	  }
-
-  }
-
-	function getDatesInstances() {
-		var dates = getDates();
-		alert(dates);
-		getInstances(dates);
-	}
-
-</script>
 </body>
 </html>
